--- a/app/ui/src/main/res/layout/drag_and_drop_preference.xml
+++ b/app/ui/src/main/res/layout/drag_and_drop_preference.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.fsck.k9.ui.settings.notifications.view.DragAndDropRecyclerView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<com.fsck.k9.ui.settings.notifications.view.DragAndDropRecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@color/amber"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
 </com.fsck.k9.ui.settings.notifications.view.DragAndDropRecyclerView>
