--- a/app/ui/src/main/res/layout/drag_and_drop_item.xml
+++ b/app/ui/src/main/res/layout/drag_and_drop_item.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_marginTop="1dp"
+    android:background="@android:color/background_light"
     android:id="@+id/list_item_inner"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -12,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignWithParentIfMissing="false"
-        android:layout_below="@+id/subject_wrapper"
+        android:layout_below="@+id/title"
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="false"
         android:layout_marginLeft="1dip"
@@ -28,11 +30,10 @@
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="1dip"
         android:layout_marginBottom="1dip"
-        android:layout_weight="0.7"
         android:ellipsize="marquee"
         android:singleLine="true"
         android:textAppearance="?android:attr/textAppearanceSmall"
